add google analytics tracking

--- a/signup.html
+++ b/signup.html
@@ -48,6 +48,15 @@
             border: 1px solid rgba(255, 255, 255, 0.08);
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YNFP8F87K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9YNFP8F87K');
+</script>
 </head>
 
 <!-- 
