--- a/admin/completion-qr-management.html
+++ b/admin/completion-qr-management.html
@@ -65,6 +65,15 @@
         
         .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24; }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YNFP8F87K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9YNFP8F87K');
+</script>
 </head>
 
 <body class="bg-background-light dark:bg-background-dark font-display antialiased min-h-screen flex flex-col text-gray-900 dark:text-white overflow-hidden transition-colors duration-300">
