--- a/student/profile.html
+++ b/student/profile.html
@@ -63,6 +63,15 @@
       padding: 8px;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YNFP8F87K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9YNFP8F87K');
+</script>
 </head>
 
   <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white transition-colors duration-300">
