edit layout and active search bar

--- a/student/profile.html
+++ b/student/profile.html
@@ -183,8 +183,10 @@
             </div>
 
             <div
-              class="bg-white dark:bg-card-dark rounded-xl p-8 border border-btn-light dark:border-border-dark flex flex-col items-center justify-center text-center shadow-sm relative overflow-hidden"
+              class="bg-white dark:bg-card-dark rounded-xl p-8 border border-btn-light dark:border-border-dark
+                    flex flex-col items-center justify-start text-center shadow-sm relative overflow-hidden"
             >
+
               <div
                 class="absolute inset-0 bg-gradient-to-br from-primary/5 to-transparent pointer-events-none"
               ></div>
@@ -192,21 +194,9 @@
                 <p
                   class="text-text-muted dark:text-text-muted-dark text-sm font-medium uppercase tracking-wider mb-2"
                 >
-                  Total DRL Points
+                  Total Badge
                 </p>
-                <p class="text-primary text-6xl font-black leading-tight mb-2">
-                  1,240
-                </p>
-                <div
-                  class="flex items-center justify-center gap-1 bg-primary/10 rounded-full px-3 py-1 w-fit mx-auto"
-                >
-                  <span
-                    class="material-symbols-outlined text-primary text-[16px]"
-                    >trending_up</span
-                  >
-                  <span class="text-primary text-xs font-bold"
-                    >+12% vs last month</span
-                  >
+                
                 </div>
               </div>
             </div>
@@ -239,14 +229,14 @@
                     class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
                   >
                     <span
-                      class="material-symbols-outlined text-text-muted dark:text-text-muted-dark text-[20px]"
+                      class="material-symbols-outlined text-black text-[20px]"
                       >mail</span
                     >
                   </div>
                   <input
                     id="email"
                     type="email"
-                    class="w-full bg-background-light dark:bg-input-dark text-text-main dark:text-white text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
+                    class="w-full bg-background-light dark:bg-input-dark text-black text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
                   />
 
                   <div
@@ -270,14 +260,14 @@
                     class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
                   >
                     <span
-                      class="material-symbols-outlined text-text-muted dark:text-text-muted-dark text-[20px]"
+                      class="material-symbols-outlined text-black text-[20px]"
                       >call</span
                     >
                   </div>
                   <input
                     id="phone"
                     type="text"
-                    class="w-full bg-background-light dark:bg-input-dark text-text-main dark:text-white text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
+                    class="w-full bg-background-light dark:bg-input-dark text-black text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
                   />
                   <div
                     class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none opacity-0 group-hover:opacity-100 transition-opacity"
@@ -300,14 +290,14 @@
                     class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
                   >
                     <span
-                      class="material-symbols-outlined text-text-muted dark:text-text-muted-dark text-[20px]"
+                      class="material-symbols-outlined text-black text-[20px]"
                       >school</span
                     >
                   </div>
                   <input
                     id="department"
                     type="text"
-                    class="w-full bg-background-light dark:bg-input-dark text-text-main dark:text-white text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
+                    class="w-full bg-background-light dark:bg-input-dark text-black text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
                   />
                   <div
                     class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none opacity-0 group-hover:opacity-100 transition-opacity"
@@ -330,14 +320,14 @@
                     class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
                   >
                     <span
-                      class="material-symbols-outlined text-text-muted dark:text-text-muted-dark text-[20px]"
+                      class="material-symbols-outlined text-black text-[20px]"
                       >calendar_today</span
                     >
                   </div>
                   <input
                     id="year"
                     type="text"
-                    class="w-full bg-background-light dark:bg-input-dark text-text-main dark:text-white text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
+                    class="w-full bg-background-light dark:bg-input-dark text-black text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 pl-10 pr-4 transition-all"
                   />
 
                   <div
@@ -360,7 +350,7 @@
                   <textarea
                     id="bio"
                     rows="3"
-                    class="w-full bg-background-light dark:bg-input-dark text-text-main dark:text-white text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 px-4 resize-none transition-all"
+                    class="w-full bg-background-light dark:bg-input-dark text-black text-sm rounded-lg border border-transparent focus:border-primary focus:ring-1 focus:ring-primary py-3 px-4 resize-none transition-all"
                   ></textarea>
 
                   <div
