--- a/student/my-journey.html
+++ b/student/my-journey.html
@@ -257,7 +257,7 @@
                     class="material-symbols-outlined text-primary text-[18px] icon-filled"
                     >bolt</span
                   >
-                  <span class="text-sm font-bold text-primary">+50 DRL</span>
+                  <span class="text-sm font-bold text-primary">Badge </span>
                 </div>
                 <div
                   class="flex items-center gap-1.5 text-green-600 dark:text-primary"
@@ -324,7 +324,7 @@
                     class="material-symbols-outlined text-primary text-[18px] icon-filled"
                     >bolt</span
                   >
-                  <span class="text-sm font-bold text-primary">+100 DRL</span>
+                  <span class="text-sm font-bold text-primary">Badge</span>
                 </div>
                 <div
                   class="flex items-center gap-1.5 text-green-600 dark:text-primary"
@@ -390,7 +390,7 @@
                     class="material-symbols-outlined text-primary text-[18px] icon-filled"
                     >bolt</span
                   >
-                  <span class="text-sm font-bold text-primary">+30 DRL</span>
+                  <span class="text-sm font-bold text-primary">Badge</span>
                 </div>
                 <div
                   class="flex items-center gap-1.5 text-green-600 dark:text-primary"
@@ -456,7 +456,7 @@
                     class="material-symbols-outlined text-primary text-[18px] icon-filled"
                     >bolt</span
                   >
-                  <span class="text-sm font-bold text-primary">+25 DRL</span>
+                  <span class="text-sm font-bold text-primary">Badge</span>
                 </div>
                 <div
                   class="flex items-center gap-1.5 text-green-600 dark:text-primary"
