--- a/event-detail.html
+++ b/event-detail.html
@@ -155,7 +155,7 @@
 
 
 <body class="bg-background-light dark:bg-background-dark font-display antialiased min-h-screen flex flex-col overflow-x-hidden text-gray-900 dark:text-white">
-    <header class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
+    <header id="student-header" class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
   <div class="flex items-center gap-4">
     <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
       <span class="material-symbols-outlined">school</span>
@@ -199,47 +199,47 @@
 </div>
   </div>
 </header>
-
-    <!-- Admin Sidebar -->
-    <aside id="admin-sidebar" class="flex-col z-40">
-        <div class="p-4 space-y-2">
-            <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-bold bg-primary/10 text-primary border border-primary/20 transition-all group overflow-hidden"
-                href="home.html">
-                <span class="material-symbols-outlined text-[24px] shrink-0">home</span>
-                <span class="nav-label whitespace-nowrap">Home</span>
-            </a>
-            <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
-                href="admin/participants-management.html">
-                <span class="material-symbols-outlined text-[24px] shrink-0">groups</span>
-                <span class="nav-label whitespace-nowrap">Participant</span>
-            </a>
-            <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
-                href="admin/check-in-management.html">
-                <span class="material-symbols-outlined text-[24px] shrink-0">fact_check</span>
-                <span class="nav-label whitespace-nowrap">Check-in</span>
-            </a>
-            <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
-                href="admin/badge-system.html">
-                <span class="material-symbols-outlined text-[24px] shrink-0">workspace_premium</span>
-                <span class="nav-label whitespace-nowrap">Badge System</span>
-            </a>
-            <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
-                href="admin/report.html">
-                <span class="material-symbols-outlined text-[24px] shrink-0">analytics</span>
-                <span class="nav-label whitespace-nowrap">Report</span>
-            </a>
-        </div>
-        <div class="mt-auto p-6 border-t border-gray-200 dark:border-[#29382f] system-status">
-            <div class="bg-surface-dark/5 dark:bg-white/5 rounded-xl p-4">
-                <p class="text-xs font-bold text-gray-500 dark:text-gray-400 uppercase">System Status</p>
-                <div class="flex items-center gap-2 mt-2">
-                    <div class="size-2 rounded-full bg-green-500 animate-pulse"></div>
-                    <p class="text-sm font-medium text-gray-900 dark:text-white">Operational</p>
-                </div>
+    <div id="admin-layout" class="hidden">
+        <!-- Admin Sidebar -->
+        <aside id="admin-sidebar" class="flex-col z-40">
+            <div class="p-4 space-y-2">
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-bold bg-primary/10 text-primary border border-primary/20 transition-all group overflow-hidden"
+                    href="home.html">
+                    <span class="material-symbols-outlined text-[24px] shrink-0">home</span>
+                    <span class="nav-label whitespace-nowrap">Home</span>
+                </a>
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
+                    href="admin/participants-management.html">
+                    <span class="material-symbols-outlined text-[24px] shrink-0">groups</span>
+                    <span class="nav-label whitespace-nowrap">Participant</span>
+                </a>
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
+                    href="admin/check-in-management.html">
+                    <span class="material-symbols-outlined text-[24px] shrink-0">fact_check</span>
+                    <span class="nav-label whitespace-nowrap">Check-in</span>
+                </a>
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
+                    href="admin/badge-system.html">
+                    <span class="material-symbols-outlined text-[24px] shrink-0">workspace_premium</span>
+                    <span class="nav-label whitespace-nowrap">Badge System</span>
+                </a>
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-black/5 dark:hover:bg-white/5 hover:text-gray-900 dark:hover:text-white transition-all group overflow-hidden"
+                    href="admin/report.html">
+                    <span class="material-symbols-outlined text-[24px] shrink-0">analytics</span>
+                    <span class="nav-label whitespace-nowrap">Report</span>
+                </a>
             </div>
-        </div>
-    </aside>
-
+            <div class="mt-auto p-6 border-t border-gray-200 dark:border-[#29382f] system-status">
+                <div class="bg-surface-dark/5 dark:bg-white/5 rounded-xl p-4">
+                    <p class="text-xs font-bold text-gray-500 dark:text-gray-400 uppercase">System Status</p>
+                    <div class="flex items-center gap-2 mt-2">
+                        <div class="size-2 rounded-full bg-green-500 animate-pulse"></div>
+                        <p class="text-sm font-medium text-gray-900 dark:text-white">Operational</p>
+                    </div>
+            </div>
+        </aside>
+    </div>
+    
     <main class="flex-grow w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 lg:py-10">
         <div>
             <div
