--- a/home.html
+++ b/home.html
@@ -262,8 +262,8 @@
           <span>Check-in</span>
         </a>
         <a href="admin/badge-system.html" class="nav-item">
-          <span class="material-symbols-outlined">qr_code_scanner</span>
-          <span>Completion QR</span>
+          <span class="material-symbols-outlined">workspace_premium</span>
+          <span>Badge System</span>
         </a>
         <a href="#" class="nav-item">
           <span class="material-symbols-outlined">analytics</span>
@@ -436,13 +436,7 @@
             </div>
           </div>
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-            <div class="space-y-1.5">
-              <label class="block text-xs font-bold text-gray-500 dark:text-gray-400 uppercase tracking-wide">DRL
-                Points</label>
-              <input
-                class="block w-full rounded-xl border-gray-200 dark:border-white/10 bg-gray-50 dark:bg-black/20 text-gray-900 dark:text-white px-4 py-3 focus:border-primary focus:ring-primary focus:ring-1"
-                placeholder="0" type="number" />
-            </div>
+            
             <div class="space-y-1.5">
               <label
                 class="block text-xs font-bold text-gray-500 dark:text-gray-400 uppercase tracking-wide">Status</label>
