feat: Refactor event registration management and UI enhancements
- Implemented RegistrationService for managing event registrations, including CRUD operations.
- Refactored my-event.page.js to utilize RegistrationService for loading and rendering registered tickets.
- Consolidated UI helper functions for settings dropdown, logout, and theme toggle into ui-helpers.js.
- Added new utility functions for date and time formatting in helpers.js.
- Created FormValidator class for reusable form validation logic.
- Introduced admin-events.service.js for event data management.
- Enhanced auth.service.js with improved error handling and documentation.
- Updated badge.service.js to maintain consistency and clarity.
- Removed redundant code and improved overall code organization for better maintainability.

--- a/admin/participants-management.html
+++ b/admin/participants-management.html
@@ -759,7 +759,7 @@
             }, 3000);
         }
     </script>
-    <script type="module" src="../js/admin/participants-management.js"></script>
+    <script type="module" src="../js/pages/admin/participants-management.page.js"></script>
 </body>
 
 </html>
