--- a/student/my-event.html
+++ b/student/my-event.html
@@ -14,6 +14,8 @@
     rel="stylesheet" />
 
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+  <!-- QR Code Scanner Library -->
+  <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
 
   <script id="tailwind-config">
     tailwind.config = {
@@ -88,6 +90,7 @@
         opacity: 0;
         transform: scale(0.85);
       }
+
       to {
         opacity: 1;
         transform: scale(0.95);
@@ -99,19 +102,20 @@
     }
   </style>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YNFP8F87K"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9YNFP8F87K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-9YNFP8F87K');
-</script>
+    gtag('config', 'G-9YNFP8F87K');
+  </script>
 </head>
 
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white antialiased overflow-x-hidden">
   <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
-    <header class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
+    <header
+      class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-slate-200 dark:border-[#29382f] bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-10">
       <div class="flex items-center gap-4">
         <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
           <span class="material-symbols-outlined">school</span>
@@ -122,19 +126,25 @@
       </div>
 
       <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
-        <a href="../home.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Home</a>
+        <a href="../home.html"
+          class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Home</a>
         <a href="my-event.html" class="text-primary font-bold relative">
           My Tickets
         </a>
-        <a href="my-journey.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My Journey</a>
-        <a href="profile.html" class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
+        <a href="my-journey.html"
+          class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My
+          Journey</a>
+        <a href="profile.html"
+          class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
       </nav>
 
       <div class="flex gap-3 relative">
-        <button class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+        <button
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
           <span class="material-symbols-outlined text-[20px]">notifications</span>
         </button>
-        <button id="settings-btn" class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+        <button id="settings-btn"
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
           <span class="material-symbols-outlined text-[20px]">settings</span>
         </button>
         <div id="settings-dropdown" class="hidden">
@@ -142,17 +152,20 @@
             Logout
           </button>
         </div>
-        <button class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+        <button
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
           <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
         </button>
 
         <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
 
         <div class="flex items-center justify-center">
-          <div id="user-avatar-initial" class="size-10 rounded-full bg-primary text-background-dark flex items-center justify-center text-xl font-bold shadow-glow select-none">
+          <div id="user-avatar-initial"
+            class="size-10 rounded-full bg-primary text-background-dark flex items-center justify-center text-xl font-bold shadow-glow select-none">
             A
           </div>
-          <button id="sidebar-toggle-btn" class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white">
+          <button id="sidebar-toggle-btn"
+            class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white">
             <span class="material-symbols-outlined text-[20px]">menu</span>
           </button>
         </div>
@@ -162,18 +175,21 @@
     <!-- MAIN CONTENT MỚI -->
     <main class="flex-1 flex justify-center py-10 px-4 md:px-10">
       <div class="w-full max-w-[1200px] flex flex-col gap-8">
-        
+
         <div class="flex flex-wrap items-center justify-between gap-4">
           <div>
-            <h1 class="text-slate-900 dark:text-white tracking-tight text-[32px] font-bold leading-tight">Your Tickets</h1>
+            <h1 class="text-slate-900 dark:text-white tracking-tight text-[32px] font-bold leading-tight">Your Tickets
+            </h1>
             <p class="text-gray-400 text-sm mt-1">Manage your upcoming events and attendance.</p>
           </div>
           <div class="flex gap-3">
-            <button class="flex items-center justify-center gap-2 rounded-full h-10 px-5 bg-[#29382f] hover:bg-[#34463c] text-white text-sm font-medium transition-colors">
+            <button
+              class="flex items-center justify-center gap-2 rounded-full h-10 px-5 bg-[#29382f] hover:bg-[#34463c] text-white text-sm font-medium transition-colors">
               <span class="material-symbols-outlined text-[18px]">sort</span>
               <span>Sort by Date</span>
             </button>
-            <button class="flex items-center justify-center gap-2 rounded-full h-10 px-5 bg-primary hover:bg-[#2fd16f] text-background-dark text-sm font-bold transition-colors">
+            <button id="scan-checkout-btn"
+              class="flex items-center justify-center gap-2 rounded-full h-10 px-5 bg-primary hover:bg-[#2fd16f] text-background-dark text-sm font-bold transition-colors">
               <span class="material-symbols-outlined text-[18px]">qr_code_scanner</span>
               <span>Scan Code</span>
             </button>
@@ -207,10 +223,11 @@
     <div class="relative z-10 flex items-center justify-center min-h-screen px-6 py-8">
       <div class="bg-transparent w-full max-w-md relative">
         <!-- Close button -->
-        <button id="close-qr-ticket-modal-btn" class="absolute -top-12 right-0 text-white hover:text-gray-200 transition-colors">
+        <button id="close-qr-ticket-modal-btn"
+          class="absolute -top-12 right-0 text-white hover:text-gray-200 transition-colors">
           <span class="material-symbols-outlined text-[32px]">close</span>
         </button>
-        
+
         <!-- Ticket container -->
         <div id="qr-ticket-modal-content">
           <!-- Ticket sẽ được render vào đây -->
@@ -219,5 +236,95 @@
     </div>
   </div>
 
+  <!-- CHECKOUT QR SCANNER MODAL -->
+  <div id="checkout-scanner-modal" class="fixed inset-0 z-50 hidden items-center justify-center">
+    <div class="absolute inset-0 bg-black/70 backdrop-blur-sm" id="checkout-scanner-modal-overlay"></div>
+    <div class="relative z-10 w-full max-w-md mx-4">
+      <div class="bg-card-dark rounded-2xl p-6 border border-[#29382f]">
+        <div class="flex items-center justify-between mb-4">
+          <h3 class="text-xl font-bold text-white">Quét Checkout QR</h3>
+          <button id="close-checkout-scanner-btn" class="text-gray-400 hover:text-white">
+            <span class="material-symbols-outlined">close</span>
+          </button>
+        </div>
+        <div id="checkout-qr-reader" class="w-full aspect-square bg-black rounded-xl overflow-hidden mb-4">
+          <p class="text-gray-400 text-sm text-center p-4">Nhấn nút bên dưới để bắt đầu quét</p>
+        </div>
+        <div class="flex gap-3">
+          <button id="start-checkout-scanner-btn"
+            class="flex-1 py-3 rounded-xl bg-primary hover:bg-[#2fd16f] text-background-dark font-bold flex items-center justify-center gap-2">
+            <span class="material-symbols-outlined">camera</span>
+            Bắt đầu quét
+          </button>
+          <button id="stop-checkout-scanner-btn"
+            class="hidden flex-1 py-3 rounded-xl bg-red-500 hover:bg-red-600 text-white font-bold flex items-center justify-center gap-2">
+            <span class="material-symbols-outlined">stop</span>
+            Dừng
+          </button>
+        </div>
+        <p class="text-gray-500 text-xs text-center mt-4">Quét mã QR từ giảng viên để checkout và nhận badge</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Q&A QUIZ MODAL -->
+  <div id="qa-quiz-modal" class="fixed inset-0 z-50 hidden items-center justify-center">
+    <div class="absolute inset-0 bg-black/70 backdrop-blur-sm" id="qa-quiz-modal-overlay"></div>
+    <div class="relative z-10 w-full max-w-lg mx-4 max-h-[90vh] overflow-y-auto">
+      <div class="bg-card-dark rounded-2xl border border-[#29382f]">
+        <!-- Header -->
+        <div class="p-6 border-b border-[#29382f]">
+          <div class="flex items-center gap-3 mb-2">
+            <div class="w-12 h-12 rounded-full bg-primary/20 flex items-center justify-center">
+              <span class="material-symbols-outlined text-primary text-2xl">quiz</span>
+            </div>
+            <div>
+              <h3 class="text-xl font-bold text-white">Nhận Badge</h3>
+              <p id="qa-event-title" class="text-sm text-gray-400">Trả lời câu hỏi để nhận badge</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Questions Container -->
+        <div id="qa-questions-container" class="p-6 space-y-4">
+          <!-- Questions will be rendered here -->
+        </div>
+
+        <!-- Footer -->
+        <div class="p-6 border-t border-[#29382f] flex gap-3">
+          <button id="submit-qa-btn"
+            class="flex-1 py-3 rounded-xl bg-primary hover:bg-[#2fd16f] text-background-dark font-bold">
+            Nộp câu trả lời
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- CHECKOUT SUCCESS MODAL -->
+  <div id="checkout-success-modal" class="fixed inset-0 z-50 hidden items-center justify-center">
+    <div class="absolute inset-0 bg-black/70 backdrop-blur-sm"></div>
+    <div class="relative z-10 w-full max-w-sm mx-4">
+      <div class="bg-card-dark rounded-2xl p-8 border border-[#29382f] text-center">
+        <div id="success-badge-icon"
+          class="w-24 h-24 rounded-full bg-primary/20 flex items-center justify-center mx-auto mb-6 animate-bounce">
+          <span class="material-symbols-outlined text-primary text-5xl">workspace_premium</span>
+        </div>
+        <h3 class="text-2xl font-bold text-white mb-2">🎉 Chúc mừng!</h3>
+        <p id="success-message" class="text-gray-400 mb-4">Bạn đã checkout thành công!</p>
+        <div id="success-badge-display"
+          class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-primary/20 border border-primary/30 mb-6">
+          <span class="material-symbols-outlined text-primary">workspace_premium</span>
+          <span id="success-badge-name" class="text-primary font-bold">Gold Badge</span>
+        </div>
+        <button id="close-success-modal-btn"
+          class="w-full py-3 rounded-xl bg-primary hover:bg-[#2fd16f] text-background-dark font-bold">
+          Tuyệt vời!
+        </button>
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
