fix: prevent duplicate QR check-in and validate event mismatch in admin scanner

--- a/event-detail.html
+++ b/event-detail.html
@@ -142,12 +142,15 @@
             #admin-sidebar {
                 transform: translateX(0);
             }
+
             body.is-admin .main-content {
-                margin-left: 300px;          /* = sidebar width */
+                margin-left: 300px;
+                /* = sidebar width */
                 max-width: 65rem;
                 margin-right: auto;
                 padding-top: 100px;
             }
+
             body:not(.is-admin) .main-content {
                 max-width: 80rem;
                 margin-left: auto;
@@ -316,7 +319,7 @@
                 </div>
         </aside>
     </div>
-    
+
     <main class="main-content flex-grow w-full  px-4 sm:px-6 lg:px-8 py-6 lg:py-10">
         <div>
             <div
