--- a/admin/participants-management.html
+++ b/admin/participants-management.html
@@ -150,29 +150,21 @@
                 for="sidebar-toggle">
                 <span class="material-symbols-outlined">menu</span>
             </label>
-            <div class="flex items-center gap-3">
-                <div class="size-8 text-primary shrink-0">
-                    <svg class="w-full h-full" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663 28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595 18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538 13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609 27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467 28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073 32.6927 39.2016 30.3042 40.548 28.1133C42.7467 24.5355 43.4845 21.4845 42.1739 20.1739Z"
-                            fill="currentColor"></path>
-                        <path clip-rule="evenodd"
-                            d="M7.24189 26.4066C7.31369 26.4411 7.64204 26.5637 8.52504 26.3738C9.59462 26.1438 11.0343 25.5311 12.7183 24.4963C14.7583 23.2426 17.0256 21.4503 19.238 19.238C21.4503 17.0256 23.2426 14.7583 24.4963 12.7183C25.5311 11.0343 26.1438 9.59463 26.3738 8.52504C26.5637 7.64204 26.4411 7.31369 26.4066 7.24189C26.345 7.21246 26.143 7.14535 25.6664 7.1918C24.9745 7.25925 23.9954 7.5498 22.7699 8.14278C20.3369 9.32007 17.3369 11.4915 14.4142 14.4142C11.4915 17.3369 9.32007 20.3369 8.14278 22.7699C7.5498 23.9954 7.25925 24.9745 7.1918 25.6664C7.14534 26.143 7.21246 26.345 7.24189 26.4066ZM29.9001 10.7285C29.4519 12.0322 28.7617 13.4172 27.9042 14.8126C26.465 17.1544 24.4686 19.6641 22.0664 22.0664C19.6641 24.4686 17.1544 26.465 14.8126 27.9042C13.4172 28.7617 12.0322 29.4519 10.7285 29.9001L21.5754 40.747C21.6001 40.7606 21.8995 40.931 22.8729 40.7217C23.9424 40.4916 25.3821 39.879 27.0661 38.8441C29.1062 37.5904 31.3734 35.7982 33.5858 33.5858C35.7982 31.3734 37.5904 29.1062 38.8441 27.0661C39.879 25.3821 40.4916 23.9425 40.7216 22.8729C40.931 21.8995 40.7606 21.6001 40.747 21.5754L29.9001 10.7285ZM29.2403 4.41187L43.5881 18.7597C44.9757 20.1473 44.9743 22.1235 44.6322 23.7139C44.2714 25.3919 43.4158 27.2666 42.252 29.1604C40.8128 31.5022 38.8165 34.012 36.4142 36.4142C34.012 38.8165 31.5022 40.8128 29.1604 42.252C27.2666 43.4158 25.3919 44.2714 23.7139 44.6322C22.1235 44.9743 20.1473 44.9757 18.7597 43.5881L4.41187 29.2403C3.29027 28.1187 3.08209 26.5973 3.21067 25.2783C3.34099 23.9415 3.8369 22.4852 4.54214 21.0277C5.96129 18.0948 8.43335 14.7382 11.5858 11.5858C14.7382 8.43335 18.0948 5.9613 21.0277 4.54214C22.4852 3.8369 23.9415 3.34099 25.2783 3.21067C26.5973 3.08209 28.1187 3.29028 29.2403 4.41187Z"
-                            fill="currentColor" fill-rule="evenodd"></path>
-                    </svg>
+            <div class="flex items-center gap-4">
+                <div class="flex h-10 w-10 items-center justify-center rounded-full bg-primary text-background-dark">
+                  <span class="material-symbols-outlined">school</span>
                 </div>
-                <span class="text-lg font-bold tracking-tight text-gray-900 dark:text-white hidden sm:block">VNUK</span>
-            </div>
+                <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] hidden sm:block">
+                  VN-UK
+                </h2>
+              </div>
         </div>
         <div class="flex-1"></div>
         <div class="flex items-center gap-2 sm:gap-3">
             <button
-                class="relative flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
-                <span
-                    class="material-symbols-outlined text-[20px] text-gray-600 dark:text-gray-300">notifications</span>
-                <span
-                    class="absolute top-2 right-2 size-2 bg-primary rounded-full border border-white dark:border-surface-dark"></span>
-            </button>
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
+          <span class="material-symbols-outlined text-[20px]">notifications</span>
+        </button>
             <button
                 class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
                 <span class="material-symbols-outlined text-[20px] text-gray-600 dark:text-gray-300">settings</span>
@@ -200,9 +192,7 @@
         <aside
             class="w-64 bg-white dark:bg-surface-dark border-r border-gray-200 dark:border-white/5 flex flex-col shrink-0 transition-[width] duration-300 ease-in-out hidden md:flex h-full">
             <div class="p-4 space-y-1">
-                <p
-                    class="px-4 text-xs font-bold text-gray-400 dark:text-gray-500 uppercase tracking-wider mb-4 mt-2 h-4 overflow-hidden nav-label">
-                    Management</p>
+                
 
                 <a class="flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group overflow-hidden"
                     href="../home.html">
@@ -241,25 +231,7 @@
                 </a>
             </div>
 
-<!-- Collapse / Expand Sidebar Button -->
-<div class="px-4 pb-4">
-    <label for="sidebar-toggle"
-        class="flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium
-               text-gray-600 dark:text-gray-400
-               hover:bg-gray-100 dark:hover:bg-white/5
-               transition-colors cursor-pointer">
-        <span class="material-symbols-outlined text-[22px]">chevron_left</span>
-        <span class="nav-label whitespace-nowrap">Collapse Sidebar</span>
-    </label>
-</div>
 
-            <div class="mt-auto p-4 system-status">
-                <div class="bg-gray-100 dark:bg-black/20 rounded-2xl p-4 border border-gray-200 dark:border-white/5">
-                    <h4 class="text-sm font-bold text-gray-900 dark:text-white">Admin Support</h4>
-                    <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Need help with the portal?</p>
-                    <button class="mt-3 text-xs font-bold text-primary hover:underline">Contact IT Dept</button>
-                </div>
-            </div>
         </aside>
 
         <main
