--- a/home.html
+++ b/home.html
@@ -213,8 +213,15 @@
       </div>
 
       <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
-      </nav>
-      <nav id="nav-menu" class="hidden md:flex items-center justify-center gap-8 flex-1">
+        <a href="home.html" class="text-primary font-bold relative">Home</a>
+        <a href="./student/my-event.html"
+          class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My
+          Tickets</a>
+        <a href="./student/my-journey.html"
+          class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">My
+          Journey</a>
+        <a href="./student/profile.html"
+          class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-primary transition-colors font-medium">Profile</a>
       </nav>
 
       <div class="flex gap-3 relative">
@@ -231,24 +238,22 @@
             Logout
           </button>
         </div>
-        <button
+        <button id="theme-toggle-btn"
           class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
           <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
         </button>
 
         <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
 
-
-        <div id="student-profile-header" class="hidden flex items-center gap-2">
-          <div
-            class="size-10 rounded-full bg-slate-300 dark:bg-[#384b40] flex items-center justify-center text-slate-700 dark:text-white font-bold">
-            <span class="material-symbols-outlined">person</span>
+        <div class="flex items-center justify-center">
+          <div id="student-avatar-initial"
+            class="hidden size-10 rounded-full bg-primary text-background-dark flex items-center justify-center text-xl font-bold shadow-glow select-none">
           </div>
+          <button id="sidebar-toggle-btn"
+            class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white ml-2">
+            <span class="material-symbols-outlined text-[20px]">menu</span>
+          </button>
         </div>
-        <button id="sidebar-toggle-btn"
-          class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white">
-          <span class="material-symbols-outlined text-[20px]">menu</span>
-        </button>
       </div>
     </header>
     <input class="peer hidden" id="sidebar-toggle" type="checkbox" />
@@ -297,9 +302,10 @@
         </div>
 
         <!-- Theme toggle -->
-        <button class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10"
-          onclick="document.documentElement.classList.toggle('dark')">
-          <span class="material-symbols-outlined text-[20px]">dark_mode</span>
+        <!-- Theme toggle -->
+        <button id="admin-theme-toggle-btn"
+          class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10">
+          <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
         </button>
 
         <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
