change banner home page and login/signup page

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 <p class="text-white font-bold">Attendance Confirmed</p>
                                 <p class="text-xs text-slate-300">Advanced Programming Workshop</p>
                             </div>
-                            <div class="ml-auto text-primary font-bold">+5 pts</div>
+                            <div class="ml-auto text-primary font-bold">Checked ✅</div>
                         </div>
 
                         <div class="absolute top-8 right-8 glass-card p-3 rounded-lg flex flex-col gap-2 w-36 shadow-xl transform rotate-3 hover:rotate-0 transition-transform duration-500">
