--- a/login.html
+++ b/login.html
@@ -73,10 +73,16 @@
         <div class="flex h-full grow flex-col md:flex-row">
 
             <div class="relative hidden md:flex md:w-1/2 lg:w-7/12 flex-col justify-end p-10 lg:p-16 overflow-hidden">
-                <div class="absolute inset-0 z-0 bg-cover bg-center bg-no-repeat" 
-                     data-alt="Modern university campus building at night with blue tones" 
-                     style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBZi8Qbt_AXG0_S5834d3rsAAW1rfJ5myCrFKpYLbvCitXQD0FoRO_6NdMl29JFPS6xofFiGxB0_Hw_t2zInqKRl9jQIRbf8i19VlSsSqe_F0VE7XZLsiWcFVMnona7_eaHY26YrIDsGZH19vUzPBV3IUWjaHX-D6_Wws9F6Jcs2FjTaGjoFawl--reT6WkSZIbY1jIJZ5tNbfB2nbqGjgqAP4rGYnLCa4X8BXviAFuuFlciOcJr1AYYsZZhOLIRNcd51WwSG23Ep4");'>
-                </div>
+                <picture class="absolute inset-0 z-0 w-full h-full">
+                    <source media="(min-width: 1024px)" srcset="/assets/images/login-desktop.avif" type="image/avif">
+                    <source media="(min-width: 768px)" srcset="/assets/images/login-desktop.avif" type="image/avif">
+                    <img src="/assets/images/login-desktop.jpg" 
+                        alt="Modern university campus building at night with blue tones" 
+                        class="w-full h-full object-cover object-center" 
+                        loading="eager" 
+                        fetchpriority="high"
+                        width="1200" height="800">
+                </picture>
                 
                 <div class="absolute inset-0 z-10 bg-background-dark/70 mix-blend-multiply"></div>
                 <div class="absolute inset-0 z-10 bg-gradient-to-t from-background-dark via-background-dark/40 to-transparent"></div>
@@ -96,11 +102,15 @@
 
             <div class="flex w-full md:w-1/2 lg:w-5/12 flex-col justify-center items-center p-6 sm:p-12 relative z-30">
                 
-                <div class="absolute inset-0 md:hidden z-0 bg-cover bg-center" 
-                     data-alt="Blurred abstract background dark colors" 
-                     style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC-4gG9piXRI9VlaMzUrTMKUVlrC8MNgbK0GuHXV3KcQ-Y6Yo_wQkr9uNuIw7kI8oC1aDQtRYsjXHv8wXqXeoR7rxp4GM6H4gEJ8qLyLjU1yfLXjcKretSstsd3Jcr8d-t9KQjQmy3WHaNtbtrbW47Zz31LIflB5uXPBCNgLEb_3ohYNNR8VgTuQ_oIXKW9H8QGmH9Eicm63zZ3dfG6fPf4H-e4x1gc2Ai2ITMKISEMC1BW1FEyIKCgRCku2mIONENR0ZSUjI_r2zo");'>
-                    <div class="absolute inset-0 bg-background-dark/90"></div>
-                </div>
+                <picture class="absolute inset-0 md:hidden z-0 w-full h-full">
+                    <source srcset="/assets/images/login-mobile.avif" type="image/avif">
+                    <img src="/assets/images/login-mobile.jpg" 
+                        alt="Blurred abstract background dark colors" 
+                        class="w-full h-full object-cover object-center" 
+                        loading="eager"
+                        width="768" height="1024">
+                </picture>
+                <div class="absolute inset-0 md:hidden bg-background-dark/90"></div>
 
                 <div class="relative z-10 w-full max-w-[440px] flex flex-col gap-8">
                     <div class="flex flex-col gap-2 text-center md:text-left">
